Closed Bug 755174 Opened 14 years ago Closed 14 years ago

spdysession::readsegments may not set reader without transaction

Categories

(Core :: Networking: HTTP, defect)

x86_64
Windows 7
defect
Not set
minor

Tracking

()

RESOLVED FIXED
mozilla15

People

(Reporter: mcmanus, Assigned: mcmanus)

Details

(Whiteboard: [spdy])

Attachments

(1 file)

mSegmentReader is not set from the passed in argument in spdysession::readsegments if no corresponding stream is found. however it is still possible that data should go out to the network by flushing the output queue. a SETTINGS frame or a PING frame (as I discovered by reading logs) are examples of this. They will eventually go out when a transaction is placed on this session but particular in the case of a time sensitive item like PING should not wait. (there might not be a transaction in the case of a nullhttptransaction, or a canceled transaction). I can't think of anything this would actually harm. In the case of PING it might result in an unused connection being closed at a different time than expected but not in a (afaict) bad way.
Attached patch patch 0Splinter Review
Assignee: nobody → mcmanus
Status: NEW → ASSIGNED
Attachment #623928 - Flags: review?(honzab.moz)
Comment on attachment 623928 [details] [diff] [review] patch 0 Review of attachment 623928 [details] [diff] [review]: ----------------------------------------------------------------- r=honzab
Attachment #623928 - Flags: review?(honzab.moz) → review+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Flags: in-testsuite-
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: