bug 755174 spdysession::readsegments may not set reader without transaction r=honzab